# personalNoteBook

./: AI-MLP.py  AI-Softmax-MNist.py  Anaconda_Jupyter_Notebook.txt  Anoconda_Jupyter_Notebook.txt  CMakeLists.txt  Cpp11.txt  Cpp_C98_note.txt  EffectiveC++.txt  README.md  Shadowsocks  data2csv.py  deepLearning.md  deepLearning_top10.md  go_learn.txt  htmlLearn_Demo.html  java-reflection-array  java-reflection.java  java_note.txt  javascript_note.txt  jsonUnmarshal_trap.go  learn-makefile.md  linuxCommand.txt  npm_download_proxy.txt  pipInstallOnWindows.md  python-diffParamsWithXml.py  pythonLearn-args-kwargs.py  pythonLearn-class.py  pythonLearn-decorator.py  pythonLearn-decorator2.py  pythonLearn-global.py  pythonLearn-idiomatic.py  pythonLearn-note.txt  pythonLearn-urllib3.py  redis_cluster_setup_on_mac_local.txt  redis_notes.txt  redis_product_note.txt  sed-Note.txt  shell-note.txt  shell-replaceMatchStrInFiles.sh  simpleClass.py  (+3 more)
